--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel= "stylesheet" href="design.css"/>
+    <script src="main.js" defer></script>
     <title>Web</title>
     <!--<img src="IMG_7992.JPEG"alt= "sunset">-->
 </head>
@@ -13,10 +14,22 @@
         Welcome
     </h1>
     <div class="container">
-        <button>Button?</button>
-        <button>Button?</button>
-        <button>Button?</button>
-        <button>Button?</button>
+        <div class="button-wrapper">
+            <button class=" main-btn">Button?</button>
+            <div class="slide-out">INFO!!!</iv></div>
+        </div>
+        <div class="button-wrapper">
+            <button class=" main-btn">Button?</button>
+            <div class="slide-out">INFO!!!</iv></div>
+        </div>
+        <div class="button-wrapper">
+            <button class=" main-btn">Button?</button>
+            <div class="slide-out">INFO!!!</iv></div>
+        </div>
+        <div class="button-wrapper">
+            <button class=" main-btn">Button?</button>
+            <div class="slide-out">INFO!!!</iv></div>
+        </div>
     </div>
 
 
