--- a/home.html
+++ b/home.html
@@ -14,21 +14,21 @@
         Welcome
     </h1>
     <div class="container">
-        <div class="button-wrapper">
+        <div id = "equipment" class="button-wrapper">
             <button class=" main-btn">Button?</button>
-            <div class="slide-out">INFO!!!</iv></div>
+            <div class="slide-out">Skills and<br> Hobbies</iv></div>
         </div>
-        <div class="button-wrapper">
+        <div  id = "skill-tree" class="button-wrapper">
             <button class=" main-btn">Button?</button>
-            <div class="slide-out">INFO!!!</iv></div>
+            <div class="slide-out">Event <br>information</iv></div>
         </div>
-        <div class="button-wrapper">
+        <div id = "save-slot" class="button-wrapper">
             <button class=" main-btn">Button?</button>
-            <div class="slide-out">INFO!!!</iv></div>
+            <div class="slide-out">different <br> hobbies</iv></div>
         </div>
-        <div class="button-wrapper">
+        <div id = "achievements" class="button-wrapper">
             <button class=" main-btn">Button?</button>
-            <div class="slide-out">INFO!!!</iv></div>
+            <div class="slide-out">more <br> stuff ig</iv></div>
         </div>
     </div>
 
