--- a/equipment.html
+++ b/equipment.html
@@ -11,22 +11,23 @@
 </head>
 <body>
     <h1>
-        Welcome
+        Equipment
     </h1>
     <div class="container">
-        <div id = "equipment" class="button-wrapper">
+        <button class="exit-btn">X</button>
+        <div id = "spells" class="button-wrapper">
             <button class=" main-btn">Button?</button>
-            <div class="slide-out">Skills and<br> Hobbies</div>
+            <div class="slide-out">Skills</div>
         </div>
-        <div  id = "skill-tree" class="button-wrapper">
+        <div  id = "weapons" class="button-wrapper">
             <button class=" main-btn">Button?</button>
             <div class="slide-out">Event <br>information</div>
         </div>
-        <div id = "save-slot" class="button-wrapper">
+        <div id = "armour" class="button-wrapper">
             <button class=" main-btn">Button?</button>
             <div class="slide-out">different <br> hobbies</div>
         </div>
-        <div id = "achievements" class="button-wrapper">
+        <div id = "artifacts" class="button-wrapper">
             <button class=" main-btn">Button?</button>
             <div class="slide-out">more <br> stuff ig</div>
         </div>
