--- a/equipment.html
+++ b/equipment.html
@@ -7,9 +7,9 @@
     <link rel= "stylesheet" href="design.css"/>
     <script src="main.js" defer></script>
     <title>Web</title>
-    <!--<img src="IMG_7992.JPEG"alt= "sunset">-->
+
 </head>
-<body>
+<body class="bg">
     <h1>
         Equipment
     </h1>
