--- a/equipment.html
+++ b/equipment.html
@@ -31,6 +31,10 @@
             <button class=" main-btn">Button?</button>
             <div class="slide-out">more <br> stuff ig</div>
         </div>
+
+        <div class="character"></div>
+
+
     </div>
 
 
