--- a/equipment.html
+++ b/equipment.html
@@ -7,13 +7,17 @@
     <link rel= "stylesheet" href="design.css"/>
     <script src="main.js" defer></script>
     <title>Web</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Geo:ital@0;1&display=swap" rel="stylesheet">
 
 </head>
 <body class="bg">
-    <h1>
-        Equipment
-    </h1>
+    <!--Equipment-->
     <div class="container">
+        <h1>
+            Equipment
+        </h1>
         <button class="exit-btn">X</button>
         <div id = "spells" class="button-wrapper">
             <button class=" main-btn">Button?</button>
@@ -32,10 +36,10 @@
             <div class="slide-out">more <br> stuff ig</div>
         </div>
 
-        <div class="character"></div>
-
-
+        <div id="character"></div>
     </div>
+
+
 
 
 
