--- a/home.html
+++ b/home.html
@@ -7,12 +7,16 @@
     <link rel= "stylesheet" href="design.css"/>
     <script src="main.js" defer></script>
     <title>Web</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Geo:ital@0;1&display=swap" rel="stylesheet">
 </head>
 <body class="bg">
-    <h1>
-        Welcome
-    </h1>
-    <div class="container">
+    <!--Home-->
+    <div id ="home-containter" class="container">
+        <h1>
+            Welcome
+        </h1>
         <div id = "equipment" class="button-wrapper">
             <button class=" main-btn">Button?</button>
             <div class="slide-out">Skills and<br> Hobbies</div>
@@ -31,7 +35,109 @@
         </div>
     </div>
 
-    <div class="character"></div>
+
+    <!--Equipment-->
+    <div id = "equipment-container" class="container">
+        <h1>
+            Equipment
+        </h1>
+        <button class="exit-btn">X</button>
+        <div id = "spells" class="button-wrapper">
+            <button class=" main-btn">Button?</button>
+            <div class="slide-out">Skills</div>
+        </div>
+        <div  id = "weapons" class="button-wrapper">
+            <button class=" main-btn">Button?</button>
+            <div class="slide-out">Event <br>information</div>
+        </div>
+        <div id = "armour" class="button-wrapper">
+            <button class=" main-btn">Button?</button>
+            <div class="slide-out">different <br> hobbies</div>
+        </div>
+        <div id = "artifacts" class="button-wrapper">
+            <button class=" main-btn">Button?</button>
+            <div class="slide-out">more <br> stuff ig</div>
+        </div>
+    </div>
+
+
+    <!--achievements-->
+    <div id = "achievements-container" class="container">
+        <h1>
+            Achievements
+        </h1>
+        <button class="exit-btn">X</button>
+        <div id = "spells" class="button-wrapper">
+            <button class=" main-btn">Button?</button>
+            <div class="slide-out">Skills</div>
+        </div>
+        <div  id = "weapons" class="button-wrapper">
+            <button class=" main-btn">Button?</button>
+            <div class="slide-out">Event <br>information</div>
+        </div>
+        <div id = "armour" class="button-wrapper">
+            <button class=" main-btn">Button?</button>
+            <div class="slide-out">different <br> hobbies</div>
+        </div>
+        <div id = "artifacts" class="button-wrapper">
+            <button class=" main-btn">Button?</button>
+            <div class="slide-out">more <br> stuff ig</div>
+        </div>
+    </div>
+
+
+    <!--save-slot-->
+    <div id = "save-slot-container" class="container">
+        <h1>
+            Save Slot
+        </h1>
+        <button class="exit-btn">X</button>
+        <div id = "spells" class="button-wrapper">
+            <button class=" main-btn">Button?</button>
+            <div class="slide-out">Skills</div>
+        </div>
+        <div  id = "weapons" class="button-wrapper">
+            <button class=" main-btn">Button?</button>
+            <div class="slide-out">Event <br>information</div>
+        </div>
+        <div id = "armour" class="button-wrapper">
+            <button class=" main-btn">Button?</button>
+            <div class="slide-out">different <br> hobbies</div>
+        </div>
+        <div id = "artifacts" class="button-wrapper">
+            <button class=" main-btn">Button?</button>
+            <div class="slide-out">more <br> stuff ig</div>
+        </div>
+    </div>
+
+
+    <!--skill-tree-->
+    <div id = "skill-tree-container" class="container">
+        <h1>
+            Skill Tree
+        </h1>
+        <button class="exit-btn">X</button>
+        <div id = "spells" class="button-wrapper">
+            <button class=" main-btn">Button?</button>
+            <div class="slide-out">Skills</div>
+        </div>
+        <div  id = "weapons" class="button-wrapper">
+            <button class=" main-btn">Button?</button>
+            <div class="slide-out">Event <br>information</div>
+        </div>
+        <div id = "armour" class="button-wrapper">
+            <button class=" main-btn">Button?</button>
+            <div class="slide-out">different <br> hobbies</div>
+        </div>
+        <div id = "artifacts" class="button-wrapper">
+            <button class=" main-btn">Button?</button>
+            <div class="slide-out">more <br> stuff ig</div>
+        </div>
+    </div>
+
+
+
+    <div id="character"></div>
 
 
 
