--- a/home.html
+++ b/home.html
@@ -12,129 +12,150 @@
     <link href="https://fonts.googleapis.com/css2?family=Geo:ital@0;1&display=swap" rel="stylesheet">
 </head>
 <body class="bg">
-    <!--Home-->
-    <div id ="home-containter" class="container">
-        <h1>
-            Welcome
-        </h1>
-        <div id = "equipment" class="button-wrapper">
-            <button class=" main-btn">Button?</button>
-            <div class="slide-out">Skills and<br> Hobbies</div>
+    <!--left-->
+    <div id="left" class="container">
+        
+        
+        <button id="music"></button>
+
+    </div>
+    <div id="middle">
+        <!--Home-->
+        <div id ="home-containter" class="container">
+            <h1>
+                Hello Adventurer! I'm Ayushka.
+            </h1>
+            <div id = "equipment" class="button-wrapper">
+                <button class=" main-btn">Button?</button>
+                <div class="slide-out">Skills and<br> Hobbies</div>
+            </div>
+            <div  id = "skill-tree" class="button-wrapper">
+                <button class=" main-btn">Button?</button>
+                <div class="slide-out">Event <br>information</div>
+            </div>
+            <div id = "save-slot" class="button-wrapper">
+                <button class=" main-btn">Button?</button>
+                <div class="slide-out">different <br> hobbies</div>
+            </div>
+            <div id = "achievements" class="button-wrapper">
+                <button class=" main-btn">Button?</button>
+                <div class="slide-out">more <br> stuff ig</div>
+            </div>
         </div>
-        <div  id = "skill-tree" class="button-wrapper">
-            <button class=" main-btn">Button?</button>
-            <div class="slide-out">Event <br>information</div>
+        <!--Equipment-->
+        <div id = "equipment-container" class="container">
+            <h1>
+                Equipment
+            </h1>
+            <button class="exit-btn">X</button>
+            <div id = "spells" class="button-wrapper">
+                <button class=" main-btn">Button?</button>
+                <div class="slide-out">Skills</div>
+            </div>
+            <div  id = "weapons" class="button-wrapper">
+                <button class=" main-btn">Button?</button>
+                <div class="slide-out">Event <br>information</div>
+            </div>
+            <div id = "armour" class="button-wrapper">
+                <button class=" main-btn">Button?</button>
+                <div class="slide-out">different <br> hobbies</div>
+            </div>
+            <div id = "artifacts" class="button-wrapper">
+                <button class=" main-btn">Button?</button>
+                <div class="slide-out">more <br> stuff ig</div>
+            </div>
         </div>
-        <div id = "save-slot" class="button-wrapper">
-            <button class=" main-btn">Button?</button>
-            <div class="slide-out">different <br> hobbies</div>
+
+
+        <!--achievements-->
+        <div id = "achievements-container" class="container">
+            <h1>
+                Achievements
+            </h1>
+            <button class="exit-btn">X</button>
+            <div id = "spells" class="button-wrapper">
+                <button class=" main-btn">Button?</button>
+                <div class="slide-out">Skills</div>
+            </div>
+            <div  id = "weapons" class="button-wrapper">
+                <button class=" main-btn">Button?</button>
+                <div class="slide-out">Event <br>information</div>
+            </div>
+            <div id = "armour" class="button-wrapper">
+                <button class=" main-btn">Button?</button>
+                <div class="slide-out">different <br> hobbies</div>
+            </div>
+            <div id = "artifacts" class="button-wrapper">
+                <button class=" main-btn">Button?</button>
+                <div class="slide-out">more <br> stuff ig</div>
+            </div>
         </div>
-        <div id = "achievements" class="button-wrapper">
-            <button class=" main-btn">Button?</button>
-            <div class="slide-out">more <br> stuff ig</div>
+
+
+        <!--save-slot-->
+        <div id = "save-slot-container" class="container">
+            <h1>
+                Save Slot
+            </h1>
+            <button class="exit-btn">X</button>
+            <div id = "spells" class="button-wrapper">
+                <button class=" main-btn">Button?</button>
+                <div class="slide-out">Skills</div>
+            </div>
+            <div  id = "weapons" class="button-wrapper">
+                <button class=" main-btn">Button?</button>
+                <div class="slide-out">Event <br>information</div>
+            </div>
+            <div id = "armour" class="button-wrapper">
+                <button class=" main-btn">Button?</button>
+                <div class="slide-out">different <br> hobbies</div>
+            </div>
+            <div id = "artifacts" class="button-wrapper">
+                <button class=" main-btn">Button?</button>
+                <div class="slide-out">more <br> stuff ig</div>
+            </div>
+        </div>
+
+
+        <!--skill-tree-->
+        <div id = "skill-tree-container" class="container">
+            <h1>
+                Skill Tree
+            </h1>
+            <button class="exit-btn">X</button>
+            <div id = "spells" class="button-wrapper">
+                <button class=" main-btn">Button?</button>
+                <div class="slide-out">Skills</div>
+            </div>
+            <div  id = "weapons" class="button-wrapper">
+                <button class=" main-btn">Button?</button>
+                <div class="slide-out">Event <br>information</div>
+            </div>
+            <div id = "armour" class="button-wrapper">
+                <button class=" main-btn">Button?</button>
+                <div class="slide-out">different <br> hobbies</div>
+            </div>
+            <div id = "artifacts" class="button-wrapper">
+                <button class=" main-btn">Button?</button>
+                <div class="slide-out">more <br> stuff ig</div>
+            </div>
         </div>
     </div>
+    <!--Right-->
+    <div id= "right" class="container"></div>
 
-
-    <!--Equipment-->
-    <div id = "equipment-container" class="container">
-        <h1>
-            Equipment
-        </h1>
-        <button class="exit-btn">X</button>
-        <div id = "spells" class="button-wrapper">
-            <button class=" main-btn">Button?</button>
-            <div class="slide-out">Skills</div>
-        </div>
-        <div  id = "weapons" class="button-wrapper">
-            <button class=" main-btn">Button?</button>
-            <div class="slide-out">Event <br>information</div>
-        </div>
-        <div id = "armour" class="button-wrapper">
-            <button class=" main-btn">Button?</button>
-            <div class="slide-out">different <br> hobbies</div>
-        </div>
-        <div id = "artifacts" class="button-wrapper">
-            <button class=" main-btn">Button?</button>
-            <div class="slide-out">more <br> stuff ig</div>
-        </div>
+    <div id="music-popout">
+        <iframe data-testid="embed-iframe"
+            style="border-radius:12px"
+            src="https://open.spotify.com/embed/playlist/2sA2PoTt2bfdQJBuym3NHO?utm_source=generator"
+            width="100%"
+            height="100%"
+            frameBorder=10px
+            allowfullscreen=""
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+            loading="lazy">
+        </iframe>
     </div>
-
-
-    <!--achievements-->
-    <div id = "achievements-container" class="container">
-        <h1>
-            Achievements
-        </h1>
-        <button class="exit-btn">X</button>
-        <div id = "spells" class="button-wrapper">
-            <button class=" main-btn">Button?</button>
-            <div class="slide-out">Skills</div>
-        </div>
-        <div  id = "weapons" class="button-wrapper">
-            <button class=" main-btn">Button?</button>
-            <div class="slide-out">Event <br>information</div>
-        </div>
-        <div id = "armour" class="button-wrapper">
-            <button class=" main-btn">Button?</button>
-            <div class="slide-out">different <br> hobbies</div>
-        </div>
-        <div id = "artifacts" class="button-wrapper">
-            <button class=" main-btn">Button?</button>
-            <div class="slide-out">more <br> stuff ig</div>
-        </div>
-    </div>
-
-
-    <!--save-slot-->
-    <div id = "save-slot-container" class="container">
-        <h1>
-            Save Slot
-        </h1>
-        <button class="exit-btn">X</button>
-        <div id = "spells" class="button-wrapper">
-            <button class=" main-btn">Button?</button>
-            <div class="slide-out">Skills</div>
-        </div>
-        <div  id = "weapons" class="button-wrapper">
-            <button class=" main-btn">Button?</button>
-            <div class="slide-out">Event <br>information</div>
-        </div>
-        <div id = "armour" class="button-wrapper">
-            <button class=" main-btn">Button?</button>
-            <div class="slide-out">different <br> hobbies</div>
-        </div>
-        <div id = "artifacts" class="button-wrapper">
-            <button class=" main-btn">Button?</button>
-            <div class="slide-out">more <br> stuff ig</div>
-        </div>
-    </div>
-
-
-    <!--skill-tree-->
-    <div id = "skill-tree-container" class="container">
-        <h1>
-            Skill Tree
-        </h1>
-        <button class="exit-btn">X</button>
-        <div id = "spells" class="button-wrapper">
-            <button class=" main-btn">Button?</button>
-            <div class="slide-out">Skills</div>
-        </div>
-        <div  id = "weapons" class="button-wrapper">
-            <button class=" main-btn">Button?</button>
-            <div class="slide-out">Event <br>information</div>
-        </div>
-        <div id = "armour" class="button-wrapper">
-            <button class=" main-btn">Button?</button>
-            <div class="slide-out">different <br> hobbies</div>
-        </div>
-        <div id = "artifacts" class="button-wrapper">
-            <button class=" main-btn">Button?</button>
-            <div class="slide-out">more <br> stuff ig</div>
-        </div>
-    </div>
-
 
 
     <div id="character"></div>
