--- a/home.html
+++ b/home.html
@@ -144,15 +144,14 @@
     <!--Right-->
     <div id= "right" class="container"></div>
 
-    <div id="music-popout">
+    <div id="spotify-player" class = "spotify-floating">
         <iframe data-testid="embed-iframe"
             style="border-radius:12px"
             src="https://open.spotify.com/embed/playlist/2sA2PoTt2bfdQJBuym3NHO?utm_source=generator"
             width="100%"
             height="100%"
-            frameBorder=10px
             allowfullscreen=""
-            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture"
             loading="lazy">
         </iframe>
     </div>
