hour 12 commit (after art)

--- a/home.html
+++ b/home.html
@@ -97,28 +97,6 @@
             <h1>
                 Scrapbook
             </h1>
-            <button class="exit-btn">X</button>
-            <img id="sun" src="Pink Images/IMG_5379.JPEG" alt="sun">
-            <img id="sun" src="Pink Images/IMG_6531.JPEG" alt="sun">
-            <img id="sun" src="Pink Images/IMG_6532.JPEG" alt="sun">
-            <img id="sun" src="Pink Images/IMG_6572.JPEG" alt="sun">
-            <img id="sun" src="Pink Images/IMG_6578.JPEG" alt="sun">
-            <img id="sun" src="Pink Images/IMG_6706.JPEG" alt="sun">
-            <img id="sun" src="Pink Images/IMG_6707.JPEG" alt="sun">
-            <img id="sun" src="Pink Images/IMG_6752.JPEG" alt="sun">
-            <img id="sun" src="Pink Images/IMG_6755.JPEG" alt="sun">
-            <img id="sun" src="Pink Images/IMG_6763.JPEG" alt="sun">
-            <img id="sun" src="Pink Images/IMG_7002.JPEG" alt="sun">
-            <img id="sun" src="Pink Images/IMG_7006.JPEG" alt="sun">
-            <img id="sun" src="Pink Images/IMG_7154.JPEG" alt="sun">
-            <img id="sun" src="Pink Images/IMG_7155.JPEG" alt="sun">
-            <img id="sun" src="Pink Images/IMG_7783.JPEG" alt="sun">
-            <img id="sun" src="Pink Images/IMG_8037.JPEG" alt="sun">
-            <img id="sun" src="Pink Images/IMG_8084.JPEG" alt="sun">
-            <img id="sun" src="Pink Images/IMG_8092.JPEG" alt="sun">
-            <img id="sun" src="Pink Images/IMG_8160.JPEG" alt="sun">
-            <img id="sun" src="Pink Images/IMG_8161.JPEG" alt="sun">
-            <img id="sun" src="Pink Images/IMG_8533.JPEG" alt="sun">
         </div>
 
 
@@ -156,8 +134,7 @@
             width="100%"
             height="100%"
             allowfullscreen=""
-            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture"
-            loading="lazy">
+            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture">
         </iframe>
     </div>
 
