hour 14 commit (socials)

--- a/home.html
+++ b/home.html
@@ -14,16 +14,23 @@
 <body class="bg">
     <!--left-->
     <div id="left" class="container">
-        
-        
-        <button id="music"></button>
+        <button id="socials"></button>
+
+        <div id="dropdown">
+            <button id="github"></button>
+            <button id="linkedin"></button>
+            <button id="discord"></button>
+            <button id="itch"></button>
+        </div>
+
+        <button id="music-box"></button>
 
     </div>
     <div id="middle">
         <!--Home-->
         <div id ="home-containter" class="container">
             <h1>
-                Hello Adventurer! I'm Ayushka.
+                Hello, I'm Ayushka.
             </h1>
             <div id = "equipment" class="button-wrapper">
                 <button class=" main-btn">Button?</button>
@@ -33,9 +40,9 @@
                 <button class=" main-btn">Button?</button>
                 <div class="slide-out">Event <br>information</div>
             </div>
-            <div id = "save-slot" class="button-wrapper">
+            <div id = "scrapbook" class="button-wrapper">
                 <button class=" main-btn">Button?</button>
-                <div class="slide-out">different <br> hobbies</div>
+                <div class="slide-out">Photography!</div>
             </div>
             <div id = "achievements" class="button-wrapper">
                 <button class=" main-btn">Button?</button>
@@ -92,8 +99,8 @@
         </div>
 
 
-        <!--save-slot-->
-        <div id = "save-slot-container" class="container">
+        <!--scrapbook-->
+        <div id = "scrapbook-container" class="container">
             <h1>
                 Photography! (Mainly Heliography)
             </h1>
