--- a/home.html
+++ b/home.html
@@ -140,18 +140,32 @@
         </div>
     </div>
     <!--Right-->
-    <div id= "right" class="container"></div>
+    <div id= "right" class="container">
+        <button id="weather"></button>
 
-    <div id="spotify-player" class = "spotify-floating">
-        <iframe data-testid="embed-iframe"
-            style="border-radius:12px"
-            src="https://open.spotify.com/embed/playlist/2sA2PoTt2bfdQJBuym3NHO?utm_source=generator"
-            width="100%"
-            height="100%"
-            allowfullscreen=""
-            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture">
-        </iframe>
     </div>
+
+    <div id="spotify-player">
+        <div id="spotify-drag-bar">
+            <iframe data-testid="embed-iframe"
+                style="border-radius:12px"
+                src="https://open.spotify.com/embed/playlist/2sA2PoTt2bfdQJBuym3NHO?utm_source=generator"
+                width="100%"
+                height="100%"
+                allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; picture-in-picture">
+            </iframe>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="search">
+            <input type="text" id="city-input" placeholder="Enter city name"
+            spellcheck="false">
+            <button><img src="weather/search.png"></button>
+
+        </div>
+    </div> 
 
 
     <div id="character"></div>
